--- a/src/html/partials/privacy-modal.html
+++ b/src/html/partials/privacy-modal.html
@@ -12,9 +12,9 @@
             
             <div class="privacy-modal__text">
                 <p><strong>Оператор персональных данных:</strong> ООО «АЛЕВИТ СТРОЙ»</p>
-                <p><strong>Адрес:</strong> Белгородская область, Белгородский район, с. Пушкарное-78, ул. Кузнечная, д. 9</p>
-                <p><strong>Email:</strong> <a href="mailto:info@alevit-stroy.ru">info@alevit-stroy.ru</a></p>
-                <p><strong>Телефон:</strong> <a href="tel:+79999999999">+7 (999) 999-99-99</a></p>
+                <p><strong>Адрес:</strong> <span id="privacy-modal-address">Белгородская область, Белгородский район, с. Пушкарное-78, ул. Кузнечная, д. 9</span></p>
+                <p><strong>Email:</strong> <a href="mailto:milk66899@gmail.com" id="privacy-modal-email">milk66899@gmail.com</a></p>
+                <p><strong>Телефон:</strong> <a href="tel:+79999999999" id="privacy-modal-phone">+7 (999) 999-99-99</a></p>
                 
                 <p>Я даю согласие ООО «АЛЕВИТ СТРОЙ» на обработку моих персональных данных, указанных в форме заявки на сайте <strong>alevit-stroy.ru</strong>, в целях:</p>
                 
@@ -36,7 +36,7 @@
                 
                 <p>Обработка персональных данных осуществляется с использованием средств автоматизации и без использования таких средств.</p>
                 
-                <p>Согласие действует до момента его отзыва путем направления письменного уведомления на адрес электронной почты: <a href="mailto:info@alevit-stroy.ru">info@alevit-stroy.ru</a></p>
+                <p>Согласие действует до момента его отзыва путем направления письменного уведомления на адрес электронной почты: <a href="mailto:milk66899@gmail.com" id="privacy-modal-email-2">milk66899@gmail.com</a></p>
                 
                 <p>Я подтверждаю, что ознакомлен(а) с <a href="/privacy.html" target="_blank">Политикой конфиденциальности</a> и даю согласие на обработку персональных данных в соответствии с указанными в ней условиями.</p>
             </div>
