--- a/src/html/partials/contacts.html
+++ b/src/html/partials/contacts.html
@@ -1,6 +1,10 @@
 <!-- CONTACTS - Контакты -->
         <!-- ============================================ -->
         <section class="contacts" id="contacts">
+            <div class="contacts__image-wrapper">
+                <img src="images/backgrounds/contacts-background.png" alt="" class="contacts__image" loading="lazy">
+                <div class="contacts__overlay"></div>
+            </div>
             <div class="contacts__container">
                 <h2 class="contacts__title">Контакты</h2>
                 <p class="contacts__subtitle">Свяжитесь с нами удобным способом</p>
