Add builder character assets and component
Added builder character PNG images, a new builder-character.js component, and associated CSS for character animations. Updated main.js and main.css to integrate the new builder character feature.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,6 +35,7 @@
 @import './components/improved-cta-form.css';
 @import './components/privacy-modal.css';
 @import './components/privacy-page.css';
+@import './components/builder-character.css';
 
 /* Утилиты */
 @import './utilities/helpers.css';
